objects/SCP_Certa_GC__Permiso_SCP__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__IdPerfil__c</fullName>
        <label>IdPerfil</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Permitir_borrar_productos_delta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se pueden eliminar productos que vienen de la integración de delta</description>
        <label>Permitir borrar productos delta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Validacion_crear_Opp_sin_ser_ejecu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Puede crear una oportunidad independientemente de no ser ejecutivo cuenta</description>
        <label>Validacion crear Opp sin ser ejecu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Validacion_crear_contacto_sin_ser_ejecu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Puede crear un contacto independientemente de no ser un ejecutivo de cuenta</description>
        <label>Validacion crear contacto sin ser ejecu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Validacion_sobre_cuenta_cabecera__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Puede crear cuentas cabeceras con mismo cuit y cuentas de gestión sin necesidad de una cuenta padre.</description>
        <label>Validacion sobre cuenta cabecera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__nombre_del_perfil__c</fullName>
        <label>nombre del perfil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Permiso SCP</label>
    <nameField>
        <label>Nombre de Permiso SCP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permisos SCP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>